# cbmconvert

./: CMakeLists.txt  COPYING  ChangeLog  Doxyfile  Makefile  Makefile.amiga  Makefile.unix  Makefile.win32  PACKAGING.md  README  README.html  README.md  TODO  TODO.md  archive.c  c2n.c  cbmconvert.1  cbmconvert.html  cbmconvert.txt  cvtinfo.pl  depend  disk2zip.1  disk2zip.c  disk2zip.txt  empty_files.cmake  file_names.cmake  image.c  input.h  lynx.c  main.c  output.h  read.c  smakefile  small_files.cmake  t64.c  unarc.c  unark.c  unlynx.c  util.c  util.h  (+4 more)
.github/workflows/: cmake-multi-platform.yml
debian/: changelog  control  copyright  rules
